[package]
name = "storage-daemon"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/chenpc/storage-daemon"

[[bin]]
name = "nexus-test"
path = "src/test/core/main.rs"

[dependencies]
libnexus = { path = "../libnexus" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wit-bindgen = "0.40.0"
spdx = "0.6.2"
